alignment alt issue fixed

--- a/apps/web-giddh/src/app/purchase/create-purchase-order/create-purchase-order.component.scss
+++ b/apps/web-giddh/src/app/purchase/create-purchase-order/create-purchase-order.component.scss
@@ -279,6 +279,10 @@
     font-size: 11px;
 }
 
+.w-100{
+    width:100%;
+}
+
 .table-section {
     display: table;
     width: 100%;
