--- a/apps/web-giddh/src/app/purchase/purchase-order/purchase-order.component.scss
+++ b/apps/web-giddh/src/app/purchase/purchase-order/purchase-order.component.scss
@@ -72,6 +72,11 @@
     }
 }
 
+.mh18_img img {
+    max-height: 20px;
+    cursor: pointer;
+}
+
 .giddh-table {
     tr {
         td {
